--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="../src/input.css"> -->
     <link rel="stylesheet" href="output.css">
-    <title>Document</title>
+    <title>My Web</title>
 </head>
-<body class="">
-    <div class="">Hello</div>
+<body class="bg-primary">
+
+  <nav>
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+      <div class="flex items-center justify-between h-16">
+        <div class="">
+          <a href="#" class="text-white font-bold text-xl">Logo</a>
+        </div>
+        <div class="hidden md:block">
+          <div class="flex items-center justify-center space-x-4">
+            <a href="#" class="text-gray-300 hover:text-white">About</a>
+            <a href="#" class="text-gray-300 hover:text-white">Projects</a>
+            <a href="#" class="text-gray-300 hover:text-white">Contact</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </nav>
+
+  <div>
+    <div class="flex bg-blue-500 m-16">
+      <div class="mx-auto">
+        <span>Hello, I'm Lintang Arsa Naura</span><br>
+        <span>A Front-End Web and Design Enthusiast.</span> 
+          <div class="bg-red-200">
+            Desc
+          </div>
+          <button class="bg-blue-200">
+            This is Button
+          </button>
+      </div>
+      <div>
+        <img class="max-w-[20%]" src="https://pbs.twimg.com/media/FwnPKqpX0AIhZ74?format=jpg&name=medium" alt="profile">
+      </div>
+    </div>
+  </div>
 </body>
 </html>
