--- a/public/index.html
+++ b/public/index.html
@@ -27,22 +27,32 @@
     </div>
   </nav>
 
-  <div>
-    <div class="flex bg-blue-500 m-16">
-      <div class="mx-auto">
-        <span>Hello, I'm Lintang Arsa Naura</span><br>
-        <span>A Front-End Web and Design Enthusiast.</span> 
-          <div class="bg-red-200">
-            Desc
-          </div>
-          <button class="bg-blue-200">
-            This is Button
-          </button>
-      </div>
-      <div>
-        <img class="max-w-[20%]" src="https://pbs.twimg.com/media/FwnPKqpX0AIhZ74?format=jpg&name=medium" alt="profile">
-      </div>
+  <div class="flex bg-blue-500 m-16">
+    <div class="mx-auto">
+      <span>Hello, I'm Lintang Arsa Naura</span><br>
+      <span>A Front-End Web and Design Enthusiast.</span> 
+        <div class="bg-red-200">
+          Desc
+        </div>
+        <button class="bg-blue-200">
+          This is Button
+        </button>
     </div>
+    <img class="max-w-[20%]" src="https://pbs.twimg.com/media/FwnPKqpX0AIhZ74?format=jpg&name=medium" alt="profile">
   </div>
+
+  <div>
+    Projects
+  </div>
+
+
+    <div class="flex flex-row items-center justify-center">
+      <div class="bg-blue-200 p-10">Box 1</div>
+      <div class="bg-blue-200 p-10">Box 2</div>
+    </div>
+    <div class="flex flex-row items-center justify-center">
+      <div class="bg-blue-200 p-10">Box 1</div>
+      <div class="bg-blue-200 p-10">Box 2</div>
+    </div>
 </body>
 </html>
