--- a/public/index.html
+++ b/public/index.html
@@ -10,22 +10,22 @@
 </head>
 <body class="bg-primary">
 
-  <nav>
-    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-      <div class="flex items-center justify-between h-16">
-        <div class="">
-          <a href="#" class="text-white font-bold text-xl">Logo</a>
-        </div>
-        <div class="hidden md:block">
-          <div class="flex items-center justify-center space-x-4">
-            <a href="#" class="text-gray-300 hover:text-white">About</a>
-            <a href="#" class="text-gray-300 hover:text-white">Projects</a>
-            <a href="#" class="text-gray-300 hover:text-white">Contact</a>
-          </div>
+<nav>
+  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+    <div class="flex items-center justify-between h-16">
+      <div class="">
+        <a href="#" class="text-white font-bold text-xl">Logo</a>
+      </div>
+      <div class="hidden md:block">
+        <div class="flex items-center justify-center space-x-4">
+          <a href="#" class="text-gray-300 hover:text-white">About</a>
+          <a href="#" class="text-gray-300 hover:text-white">Projects</a>
+          <a href="#" class="text-gray-300 hover:text-white">Contact</a>
         </div>
       </div>
     </div>
-  </nav>
+  </div>
+</nav>
 
   <div class="flex bg-blue-500 m-16">
     <div class="mx-auto">
@@ -35,24 +35,25 @@
           Desc
         </div>
         <button class="bg-blue-200">
-          This is Button
+          Download CV
         </button>
     </div>
     <img class="max-w-[20%]" src="https://pbs.twimg.com/media/FwnPKqpX0AIhZ74?format=jpg&name=medium" alt="profile">
   </div>
 
-  <div>
-    Projects
-  </div>
+<p class="text-center text-lg">Projects</p>
 
-
-    <div class="flex flex-row items-center justify-center">
+    <div class="items-center justify-center flex gap-4">
+      <div class="bg-blue-200 p-10">Box 1</div>
+      <div class="bg-blue-200 p-10">Box 2</div>
+      <div class="bg-blue-200 p-10">Box 3</div>
+    </div>
+    <div class="items-center justify-center flex gap-4 m-4">
       <div class="bg-blue-200 p-10">Box 1</div>
       <div class="bg-blue-200 p-10">Box 2</div>
     </div>
-    <div class="flex flex-row items-center justify-center">
+    <div class="items-center justify-center flex gap-4 m-4">
       <div class="bg-blue-200 p-10">Box 1</div>
-      <div class="bg-blue-200 p-10">Box 2</div>
     </div>
 </body>
 </html>
