--- a/public/index.html
+++ b/public/index.html
@@ -48,12 +48,12 @@
       <div class="bg-blue-200 p-10">Box 2</div>
       <div class="bg-blue-200 p-10">Box 3</div>
     </div>
-    <div class="items-center justify-center flex gap-4 m-4">
-      <div class="bg-blue-200 p-10">Box 1</div>
-      <div class="bg-blue-200 p-10">Box 2</div>
+    <div class="items-center justify-center flex flex-col gap-4 m-4">
+        <div class="bg-blue-200 p-10">Box 4</div>
+        <div class="bg-blue-200 p-10">Box 5</div>
+        <div class="bg-blue-200 p-10">Box 6</div>
     </div>
-    <div class="items-center justify-center flex gap-4 m-4">
-      <div class="bg-blue-200 p-10">Box 1</div>
-    </div>
+    
+
 </body>
 </html>
