--- a/public/index.html
+++ b/public/index.html
@@ -42,19 +42,37 @@
   </div>
 
 <p class="text-center text-lg">Projects</p>
-
+  <div>
     <div class="items-center justify-center flex flex-wrap gap-4 m-4">
-      <div class="bg-blue-200 p-10">Box 1</div>
-      <div class="bg-blue-200 p-10">Box 2</div>
+      <div class="bg-blue-200 p-10 my-1 px-1 md:w-1/2 lg:px-4 lg:w-1/3">
+        <p>Product Designer</p>
+        <p>Led the Product Design Process Enterprise Architect for UML Diagrams and Models, 
+          and Figma for user flows and interactive prototypes. Actively participated in Agile Scrum, 
+          collaborating with Analysts and Programmers for successful project completion.</p>
+      </div>
+      <div class="bg-blue-200 p-10 my-1 px-1 md:w-1/2 lg:px-4 lg:w-1/3">
+        <p>Freelance as 2D Rigging Artist</p>
+        <p>Work as 2D Animator with more than 10 successful gigs. Collaborated closely with clients 
+          to understand their requirements and delivering high-quality rigging on time and within budget.</p>
+      </div>
     </div>
     <div class="items-center justify-center flex flex-wrap gap-4 m-4">
-        <div class="bg-blue-200 p-10">Box 4</div>
-        <div class="bg-blue-200 p-10">Box 5</div>
+      <div class="bg-blue-200 p-10 my-1 px-1 md:w-1/2 lg:px-4 lg:w-1/3">
+        <p>W3School Web Duplication</p>
+        <p>College Project to Duplicate Famous Website's Front-End. My first project where I first know and learn
+          about TailwindCSS.
+        </p>
+      </div>
+      <div class="bg-blue-200 p-10 my-1 px-1 md:w-1/2 lg:px-4 lg:w-1/3">
+        <p>Heal'in UI</p>
+        <p>Utilized Figma to design a visually appealing and user-friendly interface for Exam Project. </p>
+      </div>
     </div>
     <div class="items-center justify-center flex flex-wrap gap-4 m-4">
-      <div class="bg-blue-200 p-10">Box 4</div>
       <div class="bg-blue-200 p-10">Box 5</div>
+      <div class="bg-blue-200 p-10">Box 6</div>
     </div>
+  </div>
     
 
 </body>
