--- a/public/index.html
+++ b/public/index.html
@@ -64,6 +64,7 @@
         </p>
       </div>
       <div class="bg-blue-200 p-10 my-1 px-1 md:w-1/2 lg:px-4 lg:w-1/3">
+        <img src="https://raw.githubusercontent.com/LynnArsa/my-web/master/healin.png" alt="Healin">
         <p>Heal'in UI</p>
         <p>Utilized Figma to design a visually appealing and user-friendly interface for Exam Project. </p>
       </div>
