--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,7 @@
           collaborating with Analysts and Programmers for successful project completion.</p>
       </div>
       <div class="bg-blue-200 p-10 my-1 px-1 md:w-1/2 lg:px-4 lg:w-1/3 w-1/2">
+        <img src="https://github.com/LynnArsa/my-web/blob/master/src/ameame.gif?raw=true" atl="amegif">
         <p class="text-4xl text-white font-bold text-center">Freelance as 2D Rigging Artist</p>
         <p>Work as 2D Animator with more than 10 successful gigs. Collaborated closely with clients 
           to understand their requirements and delivering high-quality rigging on time and within budget.</p>
@@ -58,7 +59,7 @@
     </div>
     <div class="items-center justify-center flex flex-wrap gap-4 m-4">
       <div class="bg-blue-200 p-10 my-1 px-1 md:w-1/2 lg:px-4 lg:w-1/3 w-1/2">
-        <img class="object-contain md:object-scale-down" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/w3schoolclone.png" alt="w3school">
+        <img src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/w3schoolclone.png" alt="w3school">
         <p class="text-4xl text-white font-bold text-center">W3School Web Duplication</p>
         <p>College Project to Duplicate Famous Website's Front-End. My first project where I first know and learn
           about TailwindCSS.
