--- a/public/index.html
+++ b/public/index.html
@@ -31,9 +31,12 @@
     <div class="mx-auto">
       <span>Hello, I'm Lintang Arsa Naura</span><br>
       <span>A Front-End Web and Design Enthusiast.</span> 
-        <div class="bg-red-200">
-          Desc
-        </div>
+        <p class="bg-red-200">
+          A second-year Informatics major student seeking opportunities in Front-End Web Development and Product Design. 
+          With a passion for technology and a curiosity for exploring new possibilities, I thrive on experimenting with the 
+          latest tech and programming languages.Balancing teamwork with individual initiative, I'm committed to making valuable 
+          contributions to innovative projects.
+        </p>
         <button class="bg-blue-200">
           Download CV
         </button>
@@ -42,8 +45,8 @@
   </div>
 
 <p class="text-center text-lg">Projects</p>
-  <div class="gap-4">
-    <div class="items-center justify-center flex flex-wrap gap-4">
+  <div>
+    <div class="items-center justify-center flex flex-wrap m-4 gap-4">
       <div class="bg-blue-200 md:w-1/2 lg:px-4 lg:w-1/3 w-1/2">
         <img class="w-full h-full object-contain" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/orange%20center.png" alt="orangecenter">
         <p class="text-4xl text-white font-bold text-center">Product Designer</p>
@@ -56,15 +59,17 @@
         <p class="text-4xl text-white font-bold text-center">Freelance as 2D Rigging Artist</p>
         <p>Work as 2D Animator with more than 10 successful gigs. Collaborated closely with clients 
           to understand their requirements and delivering high-quality rigging on time and within budget.</p>
+        <p>ABC</p>
       </div>
     </div>
-    <div class="items-center justify-center flex flex-wrap gap-4">
+    <div class="items-center justify-center flex flex-wrap m-4 gap-4">
       <div class="bg-blue-200 md:w-1/2 lg:px-4 lg:w-1/3 w-1/2">
         <img class="w-full h-full object-contain" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/w3schoolclone.png" alt="w3school">
         <p class="text-4xl text-white font-bold text-center">W3School Web Duplication</p>
         <p>College Project to Duplicate Famous Website's Front-End. My first project where I first know and learn
           about TailwindCSS.
         </p>
+        <p>ABC</p>
       </div>
       <div class="bg-blue-200 md:w-1/2 lg:px-4 lg:w-1/3 w-1/2">
         <img class="w-full h-full object-contain" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/healin.png" alt="Healin">
@@ -75,5 +80,14 @@
     </div>
   </div>
 
+  <!-- <div class="max-w-xs mx-auto">
+    <div class="relative">
+      <img class="w-full" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/healin.png" alt="Image">
+      <div class="absolute inset-0 flex items-center justify-center opacity-0 hover:opacity-100 transition-opacity duration-300">
+        <span class="text-white text-lg font-bold">Hover Text</span>
+      </div>
+    </div>
+  </div> -->
+  
 </body>
 </html>
