--- a/public/index.html
+++ b/public/index.html
@@ -27,17 +27,17 @@
   </div>
 </nav>
 
-  <div class="flex bg-blue-500 m-16">
-    <div class="mx-auto">
-      <span>Hello, I'm Lintang Arsa Naura</span><br>
+  <div class="flex m-16">
+    <div class="mx-auto text-white">
+      <span>Hello, I'm <b>Lintang Arsa Naura</b></span><br>
       <span>A Front-End Web and Design Enthusiast.</span> 
-        <p class="bg-red-200">
+        <p>
           A second-year Informatics major student seeking opportunities in Front-End Web Development and Product Design. 
           With a passion for technology and a curiosity for exploring new possibilities, I thrive on experimenting with the 
           latest tech and programming languages.Balancing teamwork with individual initiative, I'm committed to making valuable 
           contributions to innovative projects.
         </p>
-        <button class="bg-blue-200">
+        <button class="bg-secondary">
           Download CV
         </button>
     </div>
