--- a/public/index.html
+++ b/public/index.html
@@ -27,11 +27,11 @@
   </div>
 </nav>
 
-  <div class="flex m-16">
-    <div class="mx-auto text-white">
+  <div class="flex">
+    <div class="text-white bg-blue-200 w-1/2">
       <span>Hello, I'm <b>Lintang Arsa Naura</b></span><br>
       <span>A Front-End Web and Design Enthusiast.</span> 
-        <p>
+        <p class="py-10">
           A second-year Informatics major student seeking opportunities in Front-End Web Development and Product Design. 
           With a passion for technology and a curiosity for exploring new possibilities, I thrive on experimenting with the 
           latest tech and programming languages.Balancing teamwork with individual initiative, I'm committed to making valuable 
@@ -41,7 +41,9 @@
           Download CV
         </button>
     </div>
-    <img class="max-w-[20%]" src="https://pbs.twimg.com/media/FwnPKqpX0AIhZ74?format=jpg&name=medium" alt="profile">
+    <div class="bg-secondary w-1/2">
+      <img src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/profile.png" alt="profile">
+    </div>
   </div>
 
 <p class="text-center text-lg">Projects</p>
