--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 </nav>
 
   <div class="flex">
-    <div class="text-white bg-blue-200 w-1/2">
+    <div class="text-white w-3/5 p-[180px]">
       <span>Hello, I'm <b>Lintang Arsa Naura</b></span><br>
       <span>A Front-End Web and Design Enthusiast.</span> 
         <p class="py-10">
@@ -41,9 +41,7 @@
           Download CV
         </button>
     </div>
-    <div class="bg-secondary w-1/2">
-      <img src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/profile.png" alt="profile">
-    </div>
+      <img class="w-2/5" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/profileimg.png" alt="profile">
   </div>
 
 <p class="text-center text-lg">Projects</p>
