--- a/public/index.html
+++ b/public/index.html
@@ -28,16 +28,16 @@
 </nav>
 
   <div class="flex">
-    <div class="text-white w-3/5 p-[180px]">
-      <span>Hello, I'm <b>Lintang Arsa Naura</b></span><br>
-      <span>A Front-End Web and Design Enthusiast.</span> 
+    <div class="text-white w-3/5 p-[150px]">
+      <div class="text-5xl">Hello, I'm <b>Lintang Arsa Naura</b></div><br>
+      <div class="text-3xl">A Front-End Web and Design Enthusiast.</div> 
         <p class="py-10">
           A second-year Informatics major student seeking opportunities in Front-End Web Development and Product Design. 
           With a passion for technology and a curiosity for exploring new possibilities, I thrive on experimenting with the 
           latest tech and programming languages.Balancing teamwork with individual initiative, I'm committed to making valuable 
           contributions to innovative projects.
         </p>
-        <button class="bg-secondary">
+        <button class="bg-secondary px-10 py-4 rounded-md">
           Download CV
         </button>
     </div>
@@ -47,47 +47,56 @@
 <p class="text-center text-lg">Projects</p>
   <div>
     <div class="items-center justify-center flex flex-wrap m-4 gap-4">
-      <div class="bg-blue-200 md:w-1/2 lg:px-4 lg:w-1/3 w-1/2">
-        <img class="w-full h-full object-contain" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/orange%20center.png" alt="orangecenter">
-        <p class="text-4xl text-white font-bold text-center">Product Designer</p>
-        <p>Led the Product Design Process Enterprise Architect for UML Diagrams and Models, 
-          and Figma for user flows and interactive prototypes. Actively participated in Agile Scrum, 
-          collaborating with Analysts and Programmers for successful project completion.</p>
+
+      <div class="md:w-1/2 lg:px-4 lg:w-1/3 w-1/2 relative">
+        <img class="w-full rounded-lg" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/orange%20center.png" alt="orangecenter">
+        <div class="absolute inset-0 flex items-center justify-center opacity-0 hover:opacity-100 transition-opacity duration-300">
+          <div class="text-center max-w-md">
+            <p class="text-white text-4xl font-bold">Product Designer</p>
+            <p class="text-white text-lg ">Led the Product Design Process Enterprise Architect for UML Diagrams and Models, 
+              and Figma for user flows and interactive prototypes. Actively participated in Agile Scrum, 
+              collaborating with Analysts and Programmers for successful project completion.</p>
+          </div>
+        </div>
       </div>
-      <div class="bg-blue-200 md:w-1/2 lg:px-4 lg:w-1/3 w-1/2">
-        <img class="w-full h-full object-contain" src="https://github.com/LynnArsa/my-web/blob/master/src/ameame.gif?raw=true" atl="amegif">
-        <p class="text-4xl text-white font-bold text-center">Freelance as 2D Rigging Artist</p>
-        <p>Work as 2D Animator with more than 10 successful gigs. Collaborated closely with clients 
-          to understand their requirements and delivering high-quality rigging on time and within budget.</p>
-        <p>ABC</p>
+
+    <div class="md:w-1/2 lg:px-4 lg:w-1/3 w-1/2 relative">
+      <img class="w-full rounded-lg" src="https://github.com/LynnArsa/my-web/blob/master/src/ameame.gif?raw=true" alt="amegif">
+      <div class="absolute inset-0 flex items-center justify-center opacity-0 hover:opacity-100 transition-opacity duration-300">
+        <div class="text-center max-w-md">
+          <p class="text-white text-4xl font-bold">Freelance as 2D Rigging Artist</p>
+          <p class="text-white text-lg ">Work as 2D Animator with more than 10 successful gigs. Collaborated closely with clients 
+            to understand their requirements and delivering high-quality rigging on time and within budget.</p>
+        </div>
       </div>
     </div>
+
     <div class="items-center justify-center flex flex-wrap m-4 gap-4">
-      <div class="bg-blue-200 md:w-1/2 lg:px-4 lg:w-1/3 w-1/2">
-        <img class="w-full h-full object-contain" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/w3schoolclone.png" alt="w3school">
-        <p class="text-4xl text-white font-bold text-center">W3School Web Duplication</p>
-        <p>College Project to Duplicate Famous Website's Front-End. My first project where I first know and learn
-          about TailwindCSS.
-        </p>
-        <p>ABC</p>
+
+      <div class="md:w-1/2 lg:px-4 lg:w-1/3 w-1/2 relative">
+        <img class="w-full rounded-lg" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/w3schoolclone.png" alt="w3school">
+        <div class="absolute inset-0 flex items-center justify-center opacity-0 hover:opacity-100 transition-opacity duration-300">
+          <div class="text-center max-w-md">
+            <p class="text-white text-4xl font-bold">W3School Web Duplication</p>
+            <p class="text-white text-lg ">College Project to Duplicate Famous Website's Front-End. My first project where I first know and learn
+              about TailwindCSS.</p>
+          </div>
+        </div>
       </div>
-      <div class="bg-blue-200 md:w-1/2 lg:px-4 lg:w-1/3 w-1/2">
-        <img class="w-full h-full object-contain" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/healin.png" alt="Healin">
-        <p class="text-4xl text-white font-bold text-center">Heal'in UI</p>
-        <p>Utilized Figma to design a visually appealing and user-friendly interface for Exam Project. </p>
-        <p>Abc</p>
+
+      <div class="md:w-1/2 lg:px-4 lg:w-1/3 w-1/2 relative">
+        <img class="w-full rounded-lg" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/healin.png" alt="Healin">
+        <div class="absolute inset-0 flex items-center justify-center opacity-0 hover:opacity-100 transition-opacity duration-300">
+          <div class="text-center max-w-md">
+            <p class="text-white text-4xl font-bold">Heal'in UI</p>
+            <p class="text-white text-lg ">Utilized Figma to design a visually appealing and user-friendly interface for 
+            Exam Project.</p>
+          </div>
+        </div>
       </div>
+
     </div>
   </div>
-
-  <!-- <div class="max-w-xs mx-auto">
-    <div class="relative">
-      <img class="w-full" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/healin.png" alt="Image">
-      <div class="absolute inset-0 flex items-center justify-center opacity-0 hover:opacity-100 transition-opacity duration-300">
-        <span class="text-white text-lg font-bold">Hover Text</span>
-      </div>
-    </div>
-  </div> -->
   
 </body>
 </html>
