--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex items-center justify-between h-16">
       <div class="">
-        <a href="#" class="text-white font-bold text-xl">Logo</a>
+        <a href="#" class="text-white font-bold text-xl">Lynn.</a>
       </div>
       <div class="hidden md:block">
         <div class="flex items-center justify-center space-x-4">
@@ -27,7 +27,7 @@
   </div>
 </nav>
 
-  <div class="flex">
+  <div class="flex py-10">
     <div class="text-white w-3/5 p-[150px]">
       <div class="text-5xl">Hello, I'm <b>Lintang Arsa Naura</b></div><br>
       <div class="text-3xl">A Front-End Web and Design Enthusiast.</div> 
@@ -49,7 +49,7 @@
     <div class="items-center justify-center flex flex-wrap m-4 gap-4">
 
       <div class="md:w-1/2 lg:px-4 lg:w-1/3 w-1/2 relative">
-        <img class="w-full rounded-lg" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/orange%20center.png" alt="orangecenter">
+          <img class="w-full rounded-lg" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/orange%20center.png" alt="orangecenter">
         <div class="absolute inset-0 flex items-center justify-center opacity-0 hover:opacity-100 transition-opacity duration-300">
           <div class="text-center max-w-md">
             <p class="text-white text-4xl font-bold">Product Designer</p>
