--- a/public/index.html
+++ b/public/index.html
@@ -5,27 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="public/output.css">
+    <link rel="stylesheet" href="output.css">
     <title>My Web</title>
 </head>
 <body class="bg-primary">
 
-<nav>
-  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-    <div class="flex items-center justify-between h-16">
-      <div class="">
-        <a href="#" class="text-white font-bold text-xl">Lynn.</a>
-      </div>
-      <div class="hidden md:block">
-        <div class="flex items-center justify-center space-x-4">
-          <a href="#" class="text-gray-300 hover:text-white">About</a>
-          <a href="#" class="text-gray-300 hover:text-white">Projects</a>
-          <a href="#" class="text-gray-300 hover:text-white">Contact</a>
+  <nav>
+    <div class="max-w-7xl mx-auto sm:px-6 lg:px-8">
+      <div class="flex items-center justify-between h-16">
+        <div>
+          <a href="#" class="text-white font-bold text-xl">Lynn.</a>
+        </div>
+        <div class="hidden md:block">
+          <div class="flex items-center justify-center space-x-4">
+            <a href="#" class="text-white hover:bg-[#1B1B2F] px-8 py-2 rounded-lg">About</a>
+            <a href="#" class="text-white hover:bg-[#1B1B2F] px-8 py-2 rounded-lg">Projects</a>
+            <a href="#" class="text-white hover:bg-[#1B1B2F] px-8 py-2 rounded-lg">Contact</a>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</nav>
+  </nav>
 
   <div class="flex py-10">
     <div class="text-white w-3/5 p-[150px]">
@@ -44,7 +44,7 @@
       <img class="w-2/5" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/profileimg.png" alt="profile">
   </div>
 
-<p class="text-center text-lg">Projects</p>
+<p class="text-center text-8xl font-bold p-16 text-secondary">PROJECTS</p>
   <div>
     <div class="items-center justify-center flex flex-wrap m-4 gap-4">
 
