--- a/public/index.html
+++ b/public/index.html
@@ -44,59 +44,88 @@
       <img class="w-2/5" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/profileimg.png" alt="profile">
   </div>
 
-<p class="text-center text-8xl font-bold p-16 text-secondary">PROJECTS</p>
+<p class="text-center text-8xl font-bold p-16 text-secondary ">PROJECTS</p>
   <div>
     <div class="items-center justify-center flex flex-wrap m-4 gap-4">
 
       <div class="md:w-1/2 lg:px-4 lg:w-1/3 w-1/2 relative">
-          <img class="w-full rounded-lg" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/orange%20center.png" alt="orangecenter">
         <div class="absolute inset-0 flex items-center justify-center opacity-0 hover:opacity-100 transition-opacity duration-300">
           <div class="text-center max-w-md">
-            <p class="text-white text-4xl font-bold">Product Designer</p>
-            <p class="text-white text-lg ">Led the Product Design Process Enterprise Architect for UML Diagrams and Models, 
+            <p class="text-secondary text-4xl font-bold">Product Designer</p>
+            <p class="text-secondary text-lg ">Led the Product Design Process, Utilized Enterprise Architect for UML Diagrams and Models, 
               and Figma for user flows and interactive prototypes. Actively participated in Agile Scrum, 
               collaborating with Analysts and Programmers for successful project completion.</p>
+            </div>
           </div>
-        </div>
+        <img class="w-full rounded-lg" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/orange%20center.png" alt="orangecenter">
       </div>
 
     <div class="md:w-1/2 lg:px-4 lg:w-1/3 w-1/2 relative">
-      <img class="w-full rounded-lg" src="https://github.com/LynnArsa/my-web/blob/master/src/ameame.gif?raw=true" alt="amegif">
       <div class="absolute inset-0 flex items-center justify-center opacity-0 hover:opacity-100 transition-opacity duration-300">
         <div class="text-center max-w-md">
-          <p class="text-white text-4xl font-bold">Freelance as 2D Rigging Artist</p>
-          <p class="text-white text-lg ">Work as 2D Animator with more than 10 successful gigs. Collaborated closely with clients 
+          <p class="text-secondary text-4xl font-bold">Freelance as 2D Rigging Artist</p>
+          <p class="text-secondary text-lg ">Work as 2D Animator with more than 10 successful gigs. Collaborated closely with clients 
             to understand their requirements and delivering high-quality rigging on time and within budget.</p>
+          </div>
         </div>
-      </div>
+        <img class="w-full rounded-lg" src="https://github.com/LynnArsa/my-web/blob/master/src/ameame.gif?raw=true" alt="amegif">
     </div>
 
     <div class="items-center justify-center flex flex-wrap m-4 gap-4">
 
       <div class="md:w-1/2 lg:px-4 lg:w-1/3 w-1/2 relative">
-        <img class="w-full rounded-lg" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/w3schoolclone.png" alt="w3school">
         <div class="absolute inset-0 flex items-center justify-center opacity-0 hover:opacity-100 transition-opacity duration-300">
           <div class="text-center max-w-md">
-            <p class="text-white text-4xl font-bold">W3School Web Duplication</p>
-            <p class="text-white text-lg ">College Project to Duplicate Famous Website's Front-End. My first project where I first know and learn
+            <p class="text-secondary text-4xl font-bold">W3School Web Duplication</p>
+            <p class="text-secondary text-lg ">College Project to Duplicate Famous Website's Front-End. My first project where I first know and learn
               about TailwindCSS.</p>
+            </div>
           </div>
-        </div>
+          <img class="w-full rounded-lg" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/w3schoolclone.png" alt="w3school">
       </div>
 
       <div class="md:w-1/2 lg:px-4 lg:w-1/3 w-1/2 relative">
-        <img class="w-full rounded-lg" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/healin.png" alt="Healin">
         <div class="absolute inset-0 flex items-center justify-center opacity-0 hover:opacity-100 transition-opacity duration-300">
           <div class="text-center max-w-md">
-            <p class="text-white text-4xl font-bold">Heal'in UI</p>
-            <p class="text-white text-lg ">Utilized Figma to design a visually appealing and user-friendly interface for 
-            Exam Project.</p>
+            <p class="text-secondary text-4xl font-bold">Heal'in UI</p>
+            <p class="text-secondary text-lg ">Utilized Figma to design a visually appealing and user-friendly interface for 
+              Exam Project.</p>
+            </div>
           </div>
-        </div>
+          <img class="w-full rounded-lg" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/healin.png" alt="Healin">
       </div>
 
     </div>
+
+    <div class="items-center justify-center flex flex-wrap m-4 gap-4">
+
+      <div class="md:w-1/2 lg:px-4 lg:w-1/3 w-1/2 relative">
+        <div class="absolute flex items-center justify-center opacity-0 hover:opacity-100 transition-opacity duration-300 inset-0">
+          <div class="text-center max-w-md">
+            <p class="text-secondary text-4xl font-bold">Advice Generator Web</p>
+            <p class="text-secondary text-lg">College Project to integrate an external API for generating random advice
+              Utilized HTML, CSS, and JavaScript to create a user-friendly and interactive interface. </p>
+            </div>
+          </div>
+          <img class="w-full rounded-lg" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/advicegenerator.png" alt="advicegenerator">
+        </div>
+
+        <div class="md:w-1/2 lg:px-4 lg:w-1/3 w-1/2 relative">
+          <div class="relative">
+            <img class="w-full rounded-lg" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/healin.png" alt="Healin">
+            <div class="absolute inset-0 flex items-center justify-center opacity-0 hover:opacity-100 transition-opacity duration-300">
+              <div class="text-center max-w-md">
+                <p class="text-secondary text-4xl font-bold z-50">Heal'in UI</p>
+                <p class="text-secondary text-lg">Utilized Figma to design a visually appealing and user-friendly interface for Exam Project.</p>
+              </div>
+            </div>
+            <div class="absolute inset-0 bg-black opacity-0 hover:opacity-50 transition-opacity duration-300"></div>
+          </div>
+        </div>
+        
+        
+
+    </div>
   </div>
-  
 </body>
 </html>
