--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
   </nav>
 
   <div class="flex py-10">
-    <div class="text-white w-3/5 p-[150px]">
+    <div class="text-white w-1/2 pl-[150px] pt-[250px]">
       <div class="text-5xl">Hello, I'm <b>Lintang Arsa Naura</b></div><br>
       <div class="text-3xl">A Front-End Web and Design Enthusiast.</div> 
         <p class="py-10">
@@ -41,7 +41,7 @@
           Download CV
         </button>
     </div>
-      <img class="w-2/5" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/profileimg.png" alt="profile">
+      <img class="w-1/2 h-[80%]" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/profileimg.png" alt="profile">
   </div>
 
 <p class="text-center text-8xl font-bold p-16 text-secondary ">PROJECTS</p>
@@ -115,7 +115,7 @@
             <img class="w-full rounded-lg" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/healin.png" alt="Healin">
             <div class="absolute inset-0 flex items-center justify-center opacity-0 hover:opacity-100 transition-opacity duration-300">
               <div class="text-center max-w-md">
-                <p class="text-secondary text-4xl font-bold z-50">Heal'in UI</p>
+                <p class="text-secondary text-4xl font-bold">Heal'in UI</p>
                 <p class="text-secondary text-lg">Utilized Figma to design a visually appealing and user-friendly interface for Exam Project.</p>
               </div>
             </div>
