--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
           Download CV
         </button>
     </div>
-      <img class="w-1/2 h-[80%]" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/profileimg.png" alt="profile">
+      <img class="w-1/2" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/profileimg.png" alt="profile">
   </div>
 
 <p class="text-center text-8xl font-bold p-16 text-secondary ">PROJECTS</p>
@@ -52,7 +52,7 @@
         <div class="absolute inset-0 flex items-center justify-center opacity-0 hover:opacity-100 transition-opacity duration-300">
           <div class="text-center max-w-md">
             <p class="text-secondary text-4xl font-bold">Product Designer</p>
-            <p class="text-secondary text-lg ">Led the Product Design Process, Utilized Enterprise Architect for UML Diagrams and Models, 
+            <p class="text-black text-lg">Led the Product Design Process, Utilized Enterprise Architect for UML Diagrams and Models, 
               and Figma for user flows and interactive prototypes. Actively participated in Agile Scrum, 
               collaborating with Analysts and Programmers for successful project completion.</p>
             </div>
@@ -64,8 +64,11 @@
       <div class="absolute inset-0 flex items-center justify-center opacity-0 hover:opacity-100 transition-opacity duration-300">
         <div class="text-center max-w-md">
           <p class="text-secondary text-4xl font-bold">Freelance as 2D Rigging Artist</p>
-          <p class="text-secondary text-lg ">Work as 2D Animator with more than 10 successful gigs. Collaborated closely with clients 
+          <p class="text-black text-lg">Work as 2D Animator with more than 10 successful gigs. Collaborated closely with clients 
             to understand their requirements and delivering high-quality rigging on time and within budget.</p>
+            <button class="bg-secondary px-10 py-4 rounded-md">
+              Go to Fiverr
+            </button>
           </div>
         </div>
         <img class="w-full rounded-lg" src="https://github.com/LynnArsa/my-web/blob/master/src/ameame.gif?raw=true" alt="amegif">
@@ -76,24 +79,31 @@
       <div class="md:w-1/2 lg:px-4 lg:w-1/3 w-1/2 relative">
         <div class="absolute inset-0 flex items-center justify-center opacity-0 hover:opacity-100 transition-opacity duration-300">
           <div class="text-center max-w-md">
-            <p class="text-secondary text-4xl font-bold">W3School Web Duplication</p>
-            <p class="text-secondary text-lg ">College Project to Duplicate Famous Website's Front-End. My first project where I first know and learn
-              about TailwindCSS.</p>
+            <p class="text-secondary text-4xl font-bold">Heal'in UI</p>
+            <p class="text-black text-lg">Utilized Figma to design a visually appealing and user-friendly interface for 
+              Exam Project.</p>
+              <button class="bg-secondary px-10 py-4 rounded-md">
+                Go to Page
+              </button>
             </div>
           </div>
-          <img class="w-full rounded-lg" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/w3schoolclone.png" alt="w3school">
+          <img class="w-full rounded-lg" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/healin.png" alt="Healin">
       </div>
 
       <div class="md:w-1/2 lg:px-4 lg:w-1/3 w-1/2 relative">
         <div class="absolute inset-0 flex items-center justify-center opacity-0 hover:opacity-100 transition-opacity duration-300">
           <div class="text-center max-w-md">
-            <p class="text-secondary text-4xl font-bold">Heal'in UI</p>
-            <p class="text-secondary text-lg ">Utilized Figma to design a visually appealing and user-friendly interface for 
-              Exam Project.</p>
+            <p class="text-secondary text-4xl font-bold">W3School Web Duplication</p>
+            <p class="text-black text-lg">College Project to Duplicate Famous Website's Front-End. My first project where I first know and learn
+              about TailwindCSS.</p>
+              <button class="bg-secondary px-10 py-4 rounded-md">
+                Go to Page
+              </button>
             </div>
           </div>
-          <img class="w-full rounded-lg" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/healin.png" alt="Healin">
+          <img class="w-full rounded-lg" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/w3schoolclone.png" alt="w3school">
       </div>
+
 
     </div>
 
@@ -105,6 +115,9 @@
             <p class="text-secondary text-4xl font-bold">Advice Generator Web</p>
             <p class="text-secondary text-lg">College Project to integrate an external API for generating random advice
               Utilized HTML, CSS, and JavaScript to create a user-friendly and interactive interface. </p>
+              <button class="bg-secondary px-10 py-4 rounded-md">
+                Go to Page
+              </button>
             </div>
           </div>
           <img class="w-full rounded-lg" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/advicegenerator.png" alt="advicegenerator">
