--- a/public/index.html
+++ b/public/index.html
@@ -123,7 +123,7 @@
               </button>
             </div>
           </div>
-          <img class="w-full rounded-lg" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/w3schoolclone.png" alt="Healin">
+          <img class="w-full rounded-lg" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/w3schoolclone.png" alt="w3school">
       </div>
 
       <div class="md:w-1/2 lg:px-4 lg:w-1/3 w-1/2 relative">
@@ -137,9 +137,9 @@
               </button>
             </div>
           </div>
-          <img class="w-full rounded-lg" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/Diagrams.png" alt="w3school">
+          <img class="w-full rounded-lg" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/advicegenerator.png" alt="advicegenerator">
       </div>
-      
+
     </div>
 
     </div>
