--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 		<title>My Web</title>
 	</head>
 	<body class="bg-primary">
-		<nav>
+		<nav class="sticky top-0 bg-primary z-10">
 			<div class="max-w-7xl mx-auto sm:px-6 lg:px-8">
 				<div class="flex items-center justify-between h-16">
 					<div>
