--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 			href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
 			rel="stylesheet" />
 		<link rel="stylesheet" href="output.css" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<title>My Web</title>
 	</head>
 	<body class="bg-primary">
@@ -29,7 +30,7 @@
 		</nav>
 
 		<div class="flex py-10">
-			<div class="text-white w-1/2 pl-[150px] pt-[170px]">
+			<div class="text-white w-1/2 pl-[150px] pt-[130px]">
 				<div class="text-5xl">Hello, I'm <b>Lintang Arsa Naura</b></div>
 				<br />
 				<div class="text-3xl">A Front-End Web and Design Enthusiast.</div>
@@ -40,7 +41,35 @@
 					Balancing teamwork with individual initiative, I'm committed to making valuable
 					contributions to innovative projects.
 				</p>
-				<button class="bg-secondary px-10 py-4 rounded-md hover:bg-hover-red duration-300">Download CV</button>
+				<button class="bg-secondary px-10 py-4 rounded-md hover:bg-hover-red duration-300">
+					Download CV
+				</button>
+
+				<div class="mt-12">
+					<a href="https://github.com/LynnArsa" target="_blank">
+						<button class="bg-secondary rounded-full w-14 h-14 hover:bg-hover-red duration-300">
+							<i class="fa fa-github"></i>
+						</button>
+					</a>
+					<a href="https://www.behance.net/lynnarsa" target="_blank">
+						<button class="bg-secondary rounded-full w-14 h-14 hover:bg-hover-red duration-300 mx-2">
+							<i class="fa fa-behance"></i>
+						</button>
+					</a>
+					<a href="https://discordapp.com/users/329124696237015040" target="_blank">
+						<button class="bg-secondary rounded-full w-14 h-14 hover:bg-hover-red duration-300">
+							<img
+								class="max-w-[18px] mx-auto"
+								src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/discord.png">
+						</button>
+					</a>
+					<a href="https://www.instagram.com/lynnarsa/" target="_blank">
+						<button class="bg-secondary rounded-full w-14 h-14 hover:bg-hover-red duration-300 mx-2">
+							<i class="fa fa-instagram"></i>
+						</button>
+					</a>
+				</div>
+
 			</div>
 			<img
 				class="w-1/2"
@@ -55,13 +84,14 @@
 				<div class="relative rounded-lg overflow-hidden group">
 					<img
 						class="group-hover:blur-[2px] transition-all duration-200 ease-out"
-						src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/healin.png"
-						alt="healin" />
+						src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/mynotesapp.png"
+						alt="mynotesapp" />
 					<div
 						class="inset-0 absolute p-5 flex flex-col bg-black/40 opacity-0 scale-110 group-hover:scale-100 group-hover:opacity-100 transition-all duration-200 ease-out justify-center">
 						<p class="text-secondary text-4xl font-bold text-center">Heal'in UI</p>
 						<p class="text-lg text-center text-white p-8">
-							Utilized Figma to design a visually appealing and user-friendly interface for Exam Project.
+							Utilized Figma to design a visually appealing and user-friendly interface for Exam
+							Project.
 						</p>
 					</div>
 				</div>
@@ -75,23 +105,28 @@
 						alt="amegif" />
 					<div
 						class="inset-0 absolute p-5 flex flex-col bg-black/40 opacity-0 scale-110 group-hover:scale-100 group-hover:opacity-100 transition-all duration-200 ease-out justify-center">
-						<p class="text-secondary text-4xl font-bold text-center">Freelance as 2D Rigging Artist</p>
+						<p class="text-secondary text-4xl font-bold text-center">
+							Freelance as 2D Rigging Artist
+						</p>
 						<p class="text-lg text-center text-white p-8">
-							Work as a 2D Animator with more than 10 successful gigs. Collaborated closely with clients
-							to understand their requirements and delivering high-quality rigging on time and within
-							budget.
+							Work as a 2D Animator with more than 10 successful gigs. Collaborated closely with
+							clients to understand their requirements and delivering high-quality rigging on time and
+							within budget.
 						</p>
 						<div class="flex justify-center items-center">
 							<button class="bg-secondary px-10 py-4 rounded-md hover:bg-hover-red duration-300">
-                <a href="https://www.fiverr.com/ameamesha?up_rollout=true" target="_blank" class="text-white">Go to Page</a>
-              </button>
+								<a
+									href="https://www.fiverr.com/ameamesha?up_rollout=true"
+									target="_blank"
+									class="text-white"
+									>Go to Page</a
+								>
+							</button>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
 
-		<div class="items-center justify-center flex flex-wrap m-4 gap-4">
 			<div class="md:w-1/2 lg:px-4 lg:w-1/3 w-1/2 relative">
 				<div class="relative rounded-lg overflow-hidden group">
 					<img
@@ -102,15 +137,27 @@
 						class="inset-0 absolute p-5 flex flex-col bg-black/40 opacity-0 scale-110 group-hover:scale-100 group-hover:opacity-100 transition-all duration-200 ease-out justify-center">
 						<p class="text-secondary text-4xl font-bold text-center">UI/UX Designer</p>
 						<p class="text-lg text-center text-white p-8">Project Orange Center</p>
-						<div class="flex justify-center items-center">
-							<!-- <button class="bg-secondary px-10 py-4 rounded-md hover:bg-hover-red duration-300">
-                <a href="" target="_blank" class="text-white">Go to Page</a>
-              </button> -->
-						</div>
+						<div class="flex justify-center items-center"></div>
 					</div>
 				</div>
 			</div>
 
+			<div class="md:w-1/2 lg:px-4 lg:w-1/3 w-1/2 relative">
+				<div class="relative rounded-lg overflow-hidden group">
+					<img
+						class="group-hover:blur-[2px] transition-all duration-200 ease-out"
+						src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/healin.png"
+						alt="healin" />
+					<div
+						class="inset-0 absolute p-5 flex flex-col bg-black/40 opacity-0 scale-110 group-hover:scale-100 group-hover:opacity-100 transition-all duration-200 ease-out justify-center">
+						<p class="text-secondary text-4xl font-bold text-center">Heal'in UI</p>
+						<p class="text-lg text-center text-white p-8">
+							Utilized Figma to design a visually appealing and user-friendly interface for Exam
+							Project.
+						</p>
+					</div>
+				</div>
+			</div>
 			<div class="md:w-1/2 lg:px-4 lg:w-1/3 w-1/2 relative">
 				<div class="relative rounded-lg overflow-hidden group">
 					<img
@@ -121,19 +168,15 @@
 						class="inset-0 absolute p-5 flex flex-col bg-black/40 opacity-0 scale-110 group-hover:scale-100 group-hover:opacity-100 transition-all duration-200 ease-out justify-center">
 						<p class="text-secondary text-4xl font-bold text-center">Product Designer</p>
 						<p class="text-lg text-center text-white p-8">
-							Led the Product Design Process, Utilized Enterprise Architect for UML Diagrams and Models,
-							and Figma for user flows and interactive prototypes. Actively participated in Agile Scrum,
-							collaborating with Analysts and Programmers for successful project completion.
+							Led the Product Design Process, Utilized Enterprise Architect for UML Diagrams and
+							Models, and Figma for user flows and interactive prototypes. Actively participated in
+							Agile Scrum, collaborating with Analysts and Programmers for successful project
+							completion.
 						</p>
-						<!-- <div class="flex justify-center items-center">
-							<a href="" target="_blank" class="text-white">Go to Page</a>
-						</div> -->
 					</div>
 				</div>
 			</div>
-		</div>
 
-		<div class="items-center justify-center flex flex-wrap m-4 gap-4">
 			<div class="md:w-1/2 lg:px-4 lg:w-1/3 w-1/2 relative">
 				<div class="relative rounded-lg overflow-hidden group">
 					<img
@@ -144,13 +187,18 @@
 						class="inset-0 absolute p-5 flex flex-col bg-black/40 opacity-0 scale-110 group-hover:scale-100 group-hover:opacity-100 transition-all duration-200 ease-out justify-center">
 						<p class="text-secondary text-4xl font-bold text-center">W3School Web Duplication</p>
 						<p class="text-lg text-center text-white p-8">
-							College Project to Duplicate a Famous Website's Front-End. My first project where I first
-							learned about TailwindCSS.
+							College Project to Duplicate a Famous Website's Front-End. My first project where I
+							first learned about TailwindCSS.
 						</p>
 						<div class="flex justify-center items-center">
 							<button class="bg-secondary px-10 py-4 rounded-md hover:bg-hover-red duration-300">
-                <a href="https://lynnarsa.github.io/W3School-Clone/" target="_blank" class="text-white">Go to Page</a>
-              </button>
+								<a
+									href="https://lynnarsa.github.io/W3School-Clone/"
+									target="_blank"
+									class="text-white"
+									>Go to Page</a
+								>
+							</button>
 						</div>
 					</div>
 				</div>
@@ -166,46 +214,24 @@
 						class="inset-0 absolute p-5 flex flex-col bg-black/40 opacity-0 scale-110 group-hover:scale-100 group-hover:opacity-100 transition-all duration-200 ease-out justify-center">
 						<p class="text-secondary text-4xl font-bold text-center">Advice Generator Web</p>
 						<p class="text-lg text-center text-white p-8">
-							College Project to Duplicate a Famous Website's Front-End. My first project where I first
-							learned about TailwindCSS.
+							College Project to Duplicate a Famous Website's Front-End. My first project where I
+							first learned about TailwindCSS.
 						</p>
 						<div class="flex justify-center items-center">
 							<button class="bg-secondary px-10 py-4 rounded-md hover:bg-hover-red duration-300">
-                <a href="https://lynnarsa.github.io/Advice-Generator-App/" target="_blank" class="text-white">Go to Page</a>
-              </button>
+								<a
+									href="https://lynnarsa.github.io/Advice-Generator-App/"
+									target="_blank"
+									class="text-white"
+									>Go to Page</a
+								>
+							</button>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 
-    <div class="items-center justify-center flex flex-wrap m-4 gap-4">
-      <div class="items-center justify-center flex flex-wrap m-4 gap-4">
-        <div class="md:w-1/2 lg:px-4 lg:w-1/3 w-1/2 relative">
-          <div class="relative rounded-lg overflow-hidden group">
-            <img
-              class="group-hover:blur-[2px] transition-all duration-200 ease-out"
-              src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/healin.png"
-              alt="healin" />
-            <div
-              class="inset-0 absolute p-5 flex flex-col bg-black/40 opacity-0 scale-110 group-hover:scale-100 group-hover:opacity-100 transition-all duration-200 ease-out justify-center">
-              <p class="text-secondary text-4xl font-bold text-center">Heal'in UI</p>
-              <p class="text-lg text-center text-white p-8">
-                Utilized Figma to design a visually appealing and user-friendly interface for Exam Project.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
 		<p class="text-center text-8xl font-bold p-16 text-secondary pt-[200px]">CONTACT</p>
-
-		<div class="flex flex-row">
-			<div>GitHub</div>
-			<div>Behance</div>
-			<div>Discord</div>
-			<div>Instagram</div>
-		</div>
 	</body>
 </html>
