not responsive yet

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,11 @@
                     curiosity for exploring new possibilities, I thrive on experimenting with the latest tech and programming languages. Balancing teamwork with
                     individual initiative, I'm committed to making valuable contributions to innovative projects.
                 </p>
-                <button class="bg-secondary px-10 py-4 rounded-md hover:bg-hover-red duration-300">Download CV</button>
+                <a href="https://raw.githubusercontent.com/LynnArsa/my-web/b83c2f2229a72a604ce202081a034c0a1c57738f/src/CV_Lintang%20Arsa%20Naura.pdf" download="CV">
+                <button class="bg-secondary px-10 py-4 rounded-md hover:bg-hover-red duration-300">
+                    <p>Download CV</p>
+                </button>
+                </a>
 
                 <div class="mt-12">
                     <a href="https://github.com/LynnArsa" target="_blank">
