--- a/public/index.html
+++ b/public/index.html
@@ -30,11 +30,12 @@
             <div class="text-white p-36 w-1/2">
                 <p class="text-5xl">Hello, I'm <b>Lintang Arsa Naura</b></p>
                 <br />
-                <p class="text-3xl">A Front-End Web and Design Enthusiast.</p>
+                <p class="text-3xl">Full-stack Web and Design Enthusiast.</p>
                 <p class="py-10">
-                    A second-year Informatics major student seeking opportunities in Front-End Web Development and Product Design. With a passion for technology and 
-                    a curiosity for exploring new possibilities, I thrive on experimenting with the latest tech and programming languages. Balancing teamwork with
-                    individual initiative, I'm committed to making valuable contributions to innovative projects.
+                    A third-year Informatics Degree student. I have immersed myself in several college projects as a Product Designer, 
+                    UI/UX Designer, and Programmer. Over the past year, I have also thrived as a Freelance Animator, delivering over 20 
+                    successful projects. Passionate about technology and valuing good team communication, I am excited about new opportunities 
+                    to learn and contribute.
                 </p>
                 <a href="https://raw.githubusercontent.com/LynnArsa/my-web/b83c2f2229a72a604ce202081a034c0a1c57738f/src/CV_Lintang%20Arsa%20Naura.pdf" download="CV">
                 <button class="px-10 py-4 duration-300 rounded-md bg-secondary hover:bg-hover-red">
@@ -43,19 +44,19 @@
                 </a>
 
                 <div class="mt-12">
+                    <a href="https://www.linkedin.com/in/lynnarsa/" target="_blank">
+                        <button class="mx-2 duration-300 rounded-full bg-secondary w-14 h-14 hover:bg-hover-red">
+                            <i class="fa fa-linkedin"></i>
+                        </button>
+                    </a>
                     <a href="https://github.com/LynnArsa" target="_blank">
-                        <button class="duration-300 rounded-full bg-secondary w-14 h-14 hover:bg-hover-red">
+                        <button class="mx-2 duration-300 rounded-full bg-secondary w-14 h-14 hover:bg-hover-red">
                             <i class="fa fa-github"></i>
                         </button>
                     </a>
                     <a href="https://www.behance.net/lynnarsa" target="_blank">
                         <button class="mx-2 duration-300 rounded-full bg-secondary w-14 h-14 hover:bg-hover-red">
                             <i class="fa fa-behance"></i>
-                        </button>
-                    </a>
-                    <a href="https://discordapp.com/users/329124696237015040" target="_blank">
-                        <button class="duration-300 rounded-full bg-secondary w-14 h-14 hover:bg-hover-red">
-                            <img class="max-w-[18px] mx-auto" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/public/img/discord.png" />
                         </button>
                     </a>
                     <a href="https://www.instagram.com/lynnarsa/" target="_blank">
@@ -81,14 +82,9 @@
                         class="absolute inset-0 flex flex-col justify-center p-5 transition-all duration-200 ease-out scale-110 opacity-0 bg-black/40 group-hover:scale-100 group-hover:opacity-100">
                         <p class="text-4xl font-bold text-center text-secondary">Freelance as 2D Rigging Artist</p>
                         <p class="p-8 text-lg text-center text-white">
-                            Work as a 2D Animator with more than 20 successful gigs. Collaborated closely with clients to understand their requirements and delivering
+                            Work as a 2D Animator with more than 20 successful gigs. Collaborated closely with clients and companies to understand their requirements and delivering
                             high-quality rigging on time and within budget.
                         </p>
-                        <div class="flex items-center justify-center">
-                            <button class="px-10 py-4 duration-300 rounded-md bg-secondary hover:bg-hover-red">
-                                <a href="https://www.fiverr.com/ameamesha?up_rollout=true" target="_blank" class="text-white">Go to Page</a>
-                            </button>
-                        </div>
                     </div>
                 </div>
             </div>
