--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
                     successful projects. Passionate about technology and valuing good team communication, I am excited about new opportunities 
                     to learn and contribute.
                 </p>
-                <a href="https://raw.githubusercontent.com/LynnArsa/my-web/b83c2f2229a72a604ce202081a034c0a1c57738f/src/CV_Lintang%20Arsa%20Naura.pdf" download="CV">
+                <a href="https://github.com/LynnArsa/my-web/blob/master/public/doc/CV_Lintang%20Arsa%20Naura.pdf" download="CV">
                 <button class="px-10 py-4 duration-300 rounded-md bg-secondary hover:bg-hover-red">
                     <p>Download CV</p>
                 </button>
