--- a/public/index.html
+++ b/public/index.html
@@ -42,8 +42,7 @@
                 new opportunities
                 to learn and contribute.
             </p>
-            <a href="https://raw.githubusercontent.com/LynnArsa/my-web/57e957ff9e32e599c03b919ab8a23c4d6f8cb0be/public/doc/CV_Lintang%20Arsa%20Naura.pdf"
-                download="CV">
+            <a href="https://raw.githubusercontent.com/LynnArsa/my-web/e0cb1b0b20660dc64411443d602518d8a2f72716/public/doc/CV_Lintang%20Arsa%20Naura.pdf"download="CV">
                 <button class="px-10 py-4 duration-300 rounded-md bg-secondary hover:bg-hover-red">
                     <p>Download CV</p>
                 </button>
