--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="output.css" />
+    <link rel="stylesheet" href="public\output.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <title>LynnArsa's Website</title>
 </head>
@@ -39,7 +39,7 @@
                     successful projects. Passionate about technology and valuing good team communication, I am excited about new opportunities 
                     to learn and contribute.
                 </p>
-                <a href="doc\CV_Lintang Arsa Naura.pdf" download="CV">
+                <a href="public\doc\CV_Lintang Arsa Naura.pdf" download="CV">
                 <button class="px-10 py-4 duration-300 rounded-md bg-secondary hover:bg-hover-red">
                     <p>Download CV</p>
                 </button>
